<resources>

    <string name="app_name">Central Park Veterinary Clinic</string>
    <string name="client">Client Information</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="occupation">Occupation</string>
    <string name="pet">Pet Information</string>
    <string name="birthday">Birthday</string>
    <string name="breed">Breed</string>
    <string name="color">Color Markings</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="add">Add Data</string>
    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="sortby">Sort list by:</string>

</resources>